--- a/bio.html
+++ b/bio.html
@@ -24,7 +24,7 @@
 
 		<ul class="nav nav-pills justify-content-center font1">
 		  <li class="nav-item">
-		    <a class="nav-link" href="home.html">Home</a>
+		    <a class="nav-link" href="index.html">Home</a>
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link active" href="bio.html">Member Biographies</a>
